@@ -10,6 +10,9 @@ ADDED:
 
 CHANGED:
 
+* The automatic source code download no longer saves cached copies, to avoid
+  accidentally filling small disks.
+
 DEPRECATED:
 
 REMOVED:
